Changed the font color to light blue, added a button for future projects, changed font to Monaco, changed background color.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 /* styles.css */
 h1 {
-    color: green;
+    color: lightblue;
+    font-family:"Monaco", monospace;
 }
+body {
+    background-color: rgb(66, 64, 64); /* same as #00000 */
+  }
+
+ 
